--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 14
           registry-url: https://npm.pkg.github.com
-          scope: "@centrica-engineering"
+          scope: '@centrica-engineering'
       - name: Publish to GPR
         run: |
           git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf ssh://git@github.com/
